mcc/Test/misc/invalid/duplicate_return.c
int main()
{
	int a = 1;
	int b = 2;
	return a;
	a = b + 2;
	return b;
}